# nonebot-plugin-p5generator

./: README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
nonebot_plugin_p5generator/: __init__.py  generator.py
