[tool.poetry]
name = "nonebot-plugin-p5generator"
version = "0.1.2"
description = "A generator of persona5 chatbot based on nonebot2 framework"
authors = ["xi-yue-233 <1004514855@qq.com>"]
readme = "README.md"
packages = [{include = "nonebot_plugin_p5generator"}]

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = "^2.0.0rc2"
nonebot-adapter-onebot = "^2.2.0"
pillow = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
